[tool.poetry]
name = "notdienst-finder"
version = "0.1.0"
description = "A package to find emergency pharmacies in Germany (currently only Berlin and Brandenburg)."
readme = "README.md"
authors = ["Max Sponner <max@sponner.eu>"]
license = "MIT"
requires-python = ">=3.8"

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
beautifulsoup4 = "*"

[tool.poetry.optional-dependencies]
test = [
    "pytest"
]

# Package includes all files inside `src/`
[tool.poetry.package]
include = ["src/notdienst_finder/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
